data/collection/fixes/descriptions/scala/scala-5855
```scala
Welcome to Scala version 2.10.0-20120530-022829-8d38079ab4 (Java HotSpot(TM) 64-Bit Server VM, Java
1.6.0_25).
Type in expressions to have them evaluated.
Type :help for more information.

scala> val List(1) = List(1)
<console>:5: error: value x$1 is not a member of object $iw
  lazy val $result = `x$1`
                                          ^
```